fix bug with filter scrollbar overflow

--- a/src/app/shared/components/filter-container/filter-container.component.scss
+++ b/src/app/shared/components/filter-container/filter-container.component.scss
@@ -28,7 +28,7 @@ $filter-header-max-width: 85px;
       }
 
       .ps-active-x > .ps-scrollbar-x-rail {
-        bottom: 1px !important;
+        bottom: 2px !important;
       }
       //sass-lint:enable no-important
     }
